@@ -33,14 +33,13 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -51,17 +50,18 @@ import lombok.Builder;
 import org.hisp.dhis.common.CodeGenerator;
 import org.hisp.dhis.tracker.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.TrackerImportStrategy;
+import org.hisp.dhis.tracker.TrackerType;
 import org.hisp.dhis.tracker.ValidationMode;
 import org.hisp.dhis.tracker.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.domain.Enrollment;
 import org.hisp.dhis.tracker.domain.Event;
 import org.hisp.dhis.tracker.domain.TrackedEntity;
+import org.hisp.dhis.tracker.domain.TrackerDto;
 import org.hisp.dhis.tracker.preheat.TrackerPreheat;
 import org.hisp.dhis.tracker.report.TrackerErrorCode;
 import org.hisp.dhis.tracker.report.TrackerValidationReport;
-import org.hisp.dhis.tracker.report.ValidationErrorReporter;
-import org.hisp.dhis.tracker.validation.hooks.AbstractTrackerDtoValidationHook;
 import org.hisp.dhis.user.User;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 class DefaultTrackerValidationServiceTest
@@ -69,15 +69,35 @@ class DefaultTrackerValidationServiceTest
 
     private DefaultTrackerValidationService service;
 
-    @Test
-    void shouldNotValidateMissingUser()
+    private TrackerPreheat preheat;
+
+    private TrackerBundle.TrackerBundleBuilder bundleBuilder;
+
+    private TrackerBundle bundle;
+
+    private TrackerValidationHook hook1;
+
+    private TrackerValidationHook hook2;
+
+    @BeforeEach
+    void setUp()
     {
-        TrackerBundle bundle = newBundle()
+        preheat = mock( TrackerPreheat.class );
+        when( preheat.getIdSchemes() ).thenReturn( TrackerIdSchemeParams.builder().build() );
+
+        hook1 = mock( TrackerValidationHook.class );
+        hook2 = mock( TrackerValidationHook.class );
+
+        bundleBuilder = newBundle();
+    }
+
+    @Test
+    void shouldNotValidateWhenModeIsSkipAndUserIsNull()
+    {
+        bundle = bundleBuilder
             .validationMode( ValidationMode.SKIP )
             .user( null )
             .build();
-
-        TrackerValidationHook hook1 = mock( TrackerValidationHook.class );
         service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
 
         service.validate( bundle );
@@ -86,13 +106,12 @@ class DefaultTrackerValidationServiceTest
     }
 
     @Test
-    void shouldNotValidateSuperUserSkip()
+    void shouldNotValidateWhenModeIsSkipAndUserIsASuperUser()
     {
-        TrackerBundle bundle = newBundle()
+        bundle = bundleBuilder
             .validationMode( ValidationMode.SKIP )
             .user( superUser() )
             .build();
-        TrackerValidationHook hook1 = mock( TrackerValidationHook.class );
         service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
 
         service.validate( bundle );
@@ -101,20 +120,258 @@ class DefaultTrackerValidationServiceTest
     }
 
     @Test
-    void shouldValidateSuperUserNoSkip()
+    void shouldValidateWhenModeIsNotSkipAndUserIsASuperUser()
     {
-        TrackerBundle bundle = newBundle()
+        bundle = bundleBuilder
             .validationMode( ValidationMode.FULL )
             .user( superUser() )
             .build();
-        TrackerValidationHook hook1 = mock( TrackerValidationHook.class );
-        TrackerValidationHook hook2 = mock( TrackerValidationHook.class );
         service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
 
         service.validate( bundle );
 
         verify( hook1, times( 1 ) ).validate( any(), any() );
         verify( hook2, times( 1 ) ).validate( any(), any() );
+    }
+
+    @Test
+    void skipOnErrorHookPreventsFurtherValidationOfInvalidEntityEvenInFullValidationMode()
+    {
+
+        // Test shows
+        // 1. Hooks with skipOnError==true will prevent subsequent hooks from
+        // validating an invalid entity
+        // 2. DefaultValidationService removes invalid entities from the
+        // TrackerBundle
+
+        Event validEvent = event();
+        Event invalidEvent = event();
+
+        bundle = bundleBuilder
+            .events( events( invalidEvent, validEvent ) )
+            .build();
+
+        ValidationHook skipOnError = ValidationHook.builder()
+            .skipOnError( true )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        // using default TrackerValidationHook.skipOnError==false
+        ValidationHook doNotSkipOnError = ValidationHook.builder()
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E9999 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( skipOnError, doNotSkipOnError ),
+            Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertEquals( 1, report.getErrors().size(), "only skip on error hook should add 1 error" );
+        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
+
+        assertFalse( bundle.getEvents().contains( invalidEvent ) );
+        assertTrue( bundle.getEvents().contains( validEvent ) );
+    }
+
+    @Test
+    void fullValidationModeAddsAllErrorsToReport()
+    {
+
+        // Test shows
+        // in ValidationMode==FULL all hooks are called even with entities that
+        // are already invalid (i.e. have an error
+        // in the validation report)
+
+        Event validEvent = event();
+        Event invalidEvent = event();
+
+        bundle = bundleBuilder
+            .events( events( invalidEvent, validEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .skipOnError( false )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        ValidationHook hook2 = ValidationHook.builder()
+            .skipOnError( false )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E9999 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertEquals( 2, report.getErrors().size(), "both hooks should add 1 error each" );
+        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
+        assertHasError( report, TrackerErrorCode.E9999, invalidEvent );
+
+        assertFalse( bundle.getEvents().contains( invalidEvent ) );
+        assertTrue( bundle.getEvents().contains( validEvent ) );
+    }
+
+    @Test
+    void failFastModePreventsFurtherValidationAfterFirstErrorIsAdded()
+    {
+
+        Event validEvent = event();
+        Event invalidEvent = event();
+
+        bundle = bundleBuilder
+            .validationMode( ValidationMode.FAIL_FAST )
+            .events( events( invalidEvent, validEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .skipOnError( false )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        TrackerValidationHook hook2 = mock( TrackerValidationHook.class );
+        service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
+
+        assertFalse( bundle.getEvents().contains( invalidEvent ) );
+        assertTrue( bundle.getEvents().contains( validEvent ) );
+
+        verifyNoInteractions( hook2 );
+    }
+
+    @Test
+    void needsToRunPreventsHookExecutionOnImportStrategyDeleteByDefault()
+    {
+        Event invalidEvent = event();
+
+        bundle = bundleBuilder
+            .importStrategy( TrackerImportStrategy.DELETE )
+            .events( events( invalidEvent ) )
+            .build();
+        // StrategyPreProcessor sets the ImportStrategy in the bundle for every
+        // dto
+        bundle.setStrategy( invalidEvent, TrackerImportStrategy.DELETE );
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertFalse( report.hasErrors() );
+    }
+
+    @Test
+    void needsToRunPreventsHookExecutionIfReturnsFalse()
+    {
+        Event invalidEvent = event();
+
+        bundle = bundleBuilder
+            .events( events( invalidEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .needsToRun( false )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertFalse( report.hasErrors() );
+    }
+
+    @Test
+    void needsToRunExecutesHookIfReturnsTrue()
+    {
+        Event invalidEvent = event();
+
+        bundle = bundleBuilder
+            .events( events( invalidEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .needsToRun( true )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
+    }
+
+    @Test
+    void warningsDoNotInvalidateAndRemoveEntities()
+    {
+
+        Event validEvent = event();
+
+        bundle = bundleBuilder
+            .events( events( validEvent ) )
+            .build();
+
+        ValidationHook hook = ValidationHook.builder()
+            .validateEvent( ( reporter, event ) -> {
+                if ( validEvent.equals( event ) )
+                {
+                    reporter.addWarning( event, TrackerErrorCode.E1120 );
+                }
+            } )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertFalse( report.hasErrors() );
+        assertTrue( report.hasWarnings() );
+        assertEquals( 1, report.getWarnings().size() );
+        assertHasWarning( report, TrackerErrorCode.E1120, validEvent );
+
+        assertTrue( bundle.getEvents().contains( validEvent ) );
+    }
+
+    @Test
+    void childEntitiesOfInvalidParentsAreStillValidated()
+    {
+
+        // Test shows
+        // the children of a tracked entity will still be validated even if it
+        // as a parent is invalid
+
+        TrackedEntity invalidTrackedEntity = trackedEntity();
+        Enrollment invalidEnrollment = enrollment();
+        invalidTrackedEntity.setEnrollments( enrollments( invalidEnrollment ) );
+        Event invalidEvent = event();
+        invalidEnrollment.setEvents( events( invalidEvent ) );
+
+        bundle = bundleBuilder
+            .validationMode( ValidationMode.FULL )
+            .trackedEntities( trackedEntities( invalidTrackedEntity ) )
+            .enrollments( invalidTrackedEntity.getEnrollments() )
+            .events( invalidEnrollment.getEvents() )
+            .build();
+
+        ValidationHook hook = ValidationHook.builder()
+            .validateTrackedEntity( addErrorIfMatches( invalidTrackedEntity, TrackerErrorCode.E1090 ) )
+            .validateEnrollment( addErrorIfMatches( invalidEnrollment, TrackerErrorCode.E1069 ) )
+            .validateEvent( addErrorIfMatches( invalidEvent, TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertEquals( 3, report.getErrors().size() );
+        assertHasError( report, TrackerErrorCode.E1090, invalidTrackedEntity );
+        assertHasError( report, TrackerErrorCode.E1069, invalidEnrollment );
+        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
+
+        assertTrue( bundle.getTrackedEntities().isEmpty() );
+        assertTrue( bundle.getEnrollments().isEmpty() );
+        assertTrue( bundle.getEvents().isEmpty() );
     }
 
     private User superUser()
@@ -124,10 +381,16 @@ class DefaultTrackerValidationServiceTest
         return user;
     }
 
-    @Builder
-    private static class ValidationHook extends AbstractTrackerDtoValidationHook
+    private static <T extends TrackerDto> BiConsumer<ValidationErrorReporter, T> addErrorIfMatches( TrackerDto expected,
+        TrackerErrorCode code )
     {
-        private Boolean removeOnError;
+        return ( reporter, actual ) -> reporter.addErrorIf( () -> actual.equals( expected ), actual, code );
+    }
+
+    @Builder
+    private static class ValidationHook implements TrackerValidationHook
+    {
+        private Boolean skipOnError;
 
         private Boolean needsToRun;
 
@@ -166,12 +429,12 @@ class DefaultTrackerValidationServiceTest
         }
 
         @Override
-        public boolean removeOnError()
+        public boolean skipOnError()
         {
-            // using boxed Boolean, so we can test the default removeOnError
+            // using boxed Boolean, so we can test the default skipOnError
             // behavior of the AbstractTrackerDtoValidationHook
             // by default we delegate to AbstractTrackerDtoValidationHook
-            return Objects.requireNonNullElseGet( this.removeOnError, super::removeOnError );
+            return Objects.requireNonNullElseGet( this.skipOnError, TrackerValidationHook.super::skipOnError );
         }
 
         @Override
@@ -180,271 +443,9 @@ class DefaultTrackerValidationServiceTest
             // using boxed Boolean, so we can test the default needsToRun
             // behavior of the AbstractTrackerDtoValidationHook
             // by default we delegate to AbstractTrackerDtoValidationHook
-            return Objects.requireNonNullElseGet( this.needsToRun, () -> super.needsToRun( strategy ) );
+            return Objects.requireNonNullElseGet( this.needsToRun,
+                () -> TrackerValidationHook.super.needsToRun( strategy ) );
         }
-    }
-
-    @Test
-    void removeOnErrorHookPreventsFurtherValidationOfInvalidEntityEvenInFullValidationMode()
-    {
-
-        // Test shows
-        // 1. Hooks with removeOnError==true remove invalid entities from the
-        // TrackerBundle to prevent
-        // subsequent hooks from validating it
-        // 2. the TrackerBundle is mutated to only contain valid DTOs after
-        // validation
-        //
-        // Currently, the bundle is mutated by
-        // 1. AbstractTrackerDtoValidationHook removes invalid DTOs if the hook
-        // has removeOnError == true
-        // 2. DefaultTrackerValidationService removes invalid DTOs if they were
-        // not previously removed
-        // by AbstractTrackerDtoValidationHook i.e. hooks having removeOnError
-        // == false
-
-        Event validEvent = event();
-        Event invalidEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .events( events( invalidEvent, validEvent ) )
-            .build();
-
-        ValidationHook removeOnError = ValidationHook.builder()
-            .removeOnError( true )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        // using default AbstractTrackerDtoValidationHook behavior of
-        // removeOnError==false
-        ValidationHook doNotRemoveOnError = ValidationHook.builder()
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E9999 ) )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( removeOnError, doNotRemoveOnError ),
-            Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertTrue( report.hasErrors() );
-        assertEquals( 1, report.getErrors().size(), "only remove on error hook should add 1 error" );
-        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
-
-        assertFalse( bundle.getEvents().contains( invalidEvent ) );
-        assertTrue( bundle.getEvents().contains( validEvent ) );
-    }
-
-    @Test
-    void fullValidationModeAddsAllErrorsToReport()
-    {
-
-        // Test shows
-        // in ValidationMode==FULL all hooks are called even with entities that
-        // are already invalid (i.e. have an error
-        // in the validation report)
-
-        Event validEvent = event();
-        Event invalidEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .events( events( invalidEvent, validEvent ) )
-            .build();
-
-        ValidationHook hook1 = ValidationHook.builder()
-            .removeOnError( false )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        ValidationHook hook2 = ValidationHook.builder()
-            .removeOnError( false )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E9999 ) )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertTrue( report.hasErrors() );
-        assertEquals( 2, report.getErrors().size(), "both hooks should add 1 error each" );
-        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
-        assertHasError( report, TrackerErrorCode.E9999, invalidEvent );
-
-        assertFalse( bundle.getEvents().contains( invalidEvent ) );
-        assertTrue( bundle.getEvents().contains( validEvent ) );
-    }
-
-    @Test
-    void failFastModePreventsFurtherValidationAfterFirstErrorIsAdded()
-    {
-
-        Event validEvent = event();
-        Event invalidEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .validationMode( ValidationMode.FAIL_FAST )
-            .events( events( invalidEvent, validEvent ) )
-            .build();
-
-        ValidationHook hook1 = ValidationHook.builder()
-            .removeOnError( false )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        TrackerValidationHook hook2 = mock( TrackerValidationHook.class );
-        service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertTrue( report.hasErrors() );
-        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
-
-        assertFalse( bundle.getEvents().contains( invalidEvent ) );
-        assertTrue( bundle.getEvents().contains( validEvent ) );
-
-        verifyNoInteractions( hook2 );
-    }
-
-    @Test
-    void needsToRunPreventsHookExecutionOnImportStrategyDeleteByDefault()
-    {
-        Event invalidEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .importStrategy( TrackerImportStrategy.DELETE )
-            .events( events( invalidEvent ) )
-            .build();
-        // StrategyPreProcessor sets the ImportStrategy in the bundle for every
-        // dto
-        bundle.setStrategy( invalidEvent, TrackerImportStrategy.DELETE );
-
-        ValidationHook hook1 = ValidationHook.builder()
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertFalse( report.hasErrors() );
-    }
-
-    @Test
-    void needsToRunPreventsHookExecutionIfReturnsFalse()
-    {
-        Event invalidEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .events( events( invalidEvent ) )
-            .build();
-
-        ValidationHook hook1 = ValidationHook.builder()
-            .needsToRun( false )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertFalse( report.hasErrors() );
-    }
-
-    @Test
-    void needsToRunExecutesHookIfReturnsTrue()
-    {
-        Event invalidEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .events( events( invalidEvent ) )
-            .build();
-
-        ValidationHook hook1 = ValidationHook.builder()
-            .needsToRun( true )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertTrue( report.hasErrors() );
-        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
-    }
-
-    @Test
-    void warningsDoNotInvalidateAndRemoveEntities()
-    {
-
-        Event validEvent = event();
-
-        TrackerBundle bundle = newBundle()
-            .events( events( validEvent ) )
-            .build();
-
-        ValidationHook hook = ValidationHook.builder()
-            .validateEvent( ( reporter, event ) -> {
-                if ( validEvent.equals( event ) )
-                {
-                    reporter.addWarning( event, TrackerErrorCode.E1120 );
-                }
-            } )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( hook ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertFalse( report.hasErrors() );
-        assertTrue( report.hasWarnings() );
-        assertEquals( 1, report.getWarnings().size() );
-        assertHasWarning( report, TrackerErrorCode.E1120, validEvent );
-
-        assertTrue( bundle.getEvents().contains( validEvent ) );
-    }
-
-    @Test
-    void childEntitiesOfInvalidParentsAreStillValidated()
-    {
-
-        // Test shows
-        // the children of a tracked entity will still be validated even if it
-        // as a parent is invalid
-
-        TrackedEntity invalidTrackedEntity = trackedEntity();
-        Enrollment invalidEnrollment = enrollment();
-        invalidTrackedEntity.setEnrollments( enrollments( invalidEnrollment ) );
-        Event invalidEvent = event();
-        invalidEnrollment.setEvents( events( invalidEvent ) );
-
-        TrackerBundle bundle = newBundle()
-            .validationMode( ValidationMode.FULL )
-            .trackedEntities( trackedEntities( invalidTrackedEntity ) )
-            .enrollments( invalidTrackedEntity.getEnrollments() )
-            .events( invalidEnrollment.getEvents() )
-            .build();
-
-        ValidationHook hook = ValidationHook.builder()
-            .validateTrackedEntity(
-                ( reporter, te ) -> reporter.addErrorIf( () -> invalidTrackedEntity.equals( te ), te,
-                    TrackerErrorCode.E1090 ) )
-            .validateEnrollment( ( reporter, enrollment ) -> reporter.addErrorIf(
-                () -> invalidEnrollment.equals( enrollment ), enrollment,
-                TrackerErrorCode.E1069 ) )
-            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
-                TrackerErrorCode.E1032 ) )
-            .build();
-        service = new DefaultTrackerValidationService( List.of( hook ), Collections.emptyList() );
-
-        TrackerValidationReport report = service.validate( bundle );
-
-        assertTrue( report.hasErrors() );
-        assertEquals( 3, report.getErrors().size() );
-        assertHasError( report, TrackerErrorCode.E1090, invalidTrackedEntity );
-        assertHasError( report, TrackerErrorCode.E1069, invalidEnrollment );
-        assertHasError( report, TrackerErrorCode.E1032, invalidEvent );
-
-        assertTrue( bundle.getTrackedEntities().isEmpty() );
-        assertTrue( bundle.getEnrollments().isEmpty() );
-        assertTrue( bundle.getEvents().isEmpty() );
     }
 
     private TrackedEntity trackedEntity()
@@ -459,40 +460,30 @@ class DefaultTrackerValidationServiceTest
 
     private Event event()
     {
-        return Event.builder().event( CodeGenerator.generateUid() ).build();
+        String enrollment = CodeGenerator.generateUid();
+        when( preheat.exists( argThat(
+            t -> t != null && t.getTrackerType() == TrackerType.ENROLLMENT && enrollment.equals( t.getUid() ) ) ) )
+                .thenReturn( true );
+        return Event.builder().event( CodeGenerator.generateUid() ).enrollment( enrollment ).build();
     }
 
     private List<TrackedEntity> trackedEntities( TrackedEntity... trackedEntities )
     {
-        // Note: the current AbstractTrackerDtoValidationHook relies on the
-        // bundle "DTO" lists to be mutable
-        // it uses iterator.remove() in validateTrackerDtos()
-        // which is why we cannot simply use List.of(), Arrays.asList()
-        return new ArrayList<>( Arrays.asList( trackedEntities ) );
+        return List.of( trackedEntities );
     }
 
     private List<Enrollment> enrollments( Enrollment... enrollments )
     {
-        // Note: the current AbstractTrackerDtoValidationHook relies on the
-        // bundle "DTO" lists to be mutable
-        // it uses iterator.remove() in validateTrackerDtos()
-        // which is why we cannot simply use List.of(), Arrays.asList()
-        return new ArrayList<>( Arrays.asList( enrollments ) );
+        return List.of( enrollments );
     }
 
     private List<Event> events( Event... events )
     {
-        // Note: the current AbstractTrackerDtoValidationHook relies on the
-        // bundle "DTO" lists to be mutable
-        // it uses iterator.remove() in validateTrackerDtos()
-        // which is why we cannot simply use List.of(), Arrays.asList()
-        return new ArrayList<>( Arrays.asList( events ) );
+        return List.of( events );
     }
 
     private TrackerBundle.TrackerBundleBuilder newBundle()
     {
-        TrackerPreheat preheat = new TrackerPreheat();
-        preheat.setIdSchemes( TrackerIdSchemeParams.builder().build() );
         return TrackerBundle.builder().preheat( preheat ).skipRuleEngine( true );
     }
 }
